tests/snapshots/semantic_package_snapshots__capability_transfer_literal_address_pkg_stable.snap
---
source: tests/semantic_package_snapshots.rs
expression: out
---
capability_transfer_literal_address:sources/capability_transfer_literal_address.move:42: 9: warning: Capability-like object `cases::AdminCap` transferred to a literal address in `positive_literal`. Prefer transferring to tx_context::sender(ctx) or otherwise prove recipient authorization.
capability_transfer_literal_address:sources/capability_transfer_literal_address.move:59: 9: warning: Capability-like object `cases::AdminCap` transferred to a literal address in `suppressed_literal`. Prefer transferring to tx_context::sender(ctx) or otherwise prove recipient authorization.
custom_state_change:sources/capability_transfer_literal_address.move:41: 16: warning: potentially unenforceable custom transfer/share/freeze policy: Potential unintended implementation of a custom transfer function.
custom_state_change:sources/capability_transfer_literal_address.move:45: 16: warning: potentially unenforceable custom transfer/share/freeze policy: Potential unintended implementation of a custom transfer function.
public_mut_tx_context:sources/capability_transfer_literal_address.move:45: 52: warning: prefer '&mut TxContext' over '&TxContext': 'public' functions should prefer '&mut TxContext' over '&TxContext' for better upgradability.
