tests/snapshots/semantic_package_snapshots__event_past_tense_pkg_stable.snap
---
source: tests/semantic_package_snapshots.rs
expression: out
---
event_past_tense:sources/event_past_tense.move:23: 9: warning: Event `CreateItem` uses present tense (starts with `Create`). Events describe things that happened, use past tense like `ItemCreated`.
event_past_tense:sources/event_past_tense.move:25: 9: warning: Event `MintToken` uses present tense (starts with `Mint`). Events describe things that happened, use past tense like `TokenMinted`.
